fixed overflow-x

--- a/style.css
+++ b/style.css
@@ -10,6 +10,8 @@ html{
     font-size: 10px;
     font-family:  'Open Sans', sans-serif; 
     color: #eee;
+    overflow-x: hidden;
+    box-sizing: border-box;
 }
 
 body{
